# rust-snake

./: .gitignore  Cargo.toml  Readme.md
desktop/: Cargo.toml
desktop/src/: a_star.rs  colors.rs  game.rs  game_loop.rs  lib.rs  main.rs  render_text.rs  snake.rs  util.rs
examples/vec/: main.rs
