[package]
name = "desktop"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sdl2 = { version = "0.34", features = ["ttf"]}
rand = { version = "0.7" }